Fix elements center alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,22 @@
+body {
+    margin: 20px;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 20px;
+}
+
 .box {
     width: 100px;
     height: 100px;
     border-width: 20px;
     border-color: black;
     background-color: yellowgreen;
-    margin: 10px;
+    margin: 2px;
 }
 
 container {
-    width: 500px;
+    width: 416px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
